# libby

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.watcher  README.md  check_vector_lengths.py  docker-compose.yml  mkdocs.yml  pyproject.toml  restore_backup.py
docker/: init-db.sql  start.sh
docs/: COMPLETE_MIGRATION_GUIDE.md  MIGRATION.md  MIGRATION_TOOLS.md  POSTGRESQL_MIGRATION_SUMMARY.md  README.md  about.md  contact.md  index.md  license.md  reference.md  tutorial.md
libbydbot/: __init__.py  cli.py  cli_legacy.py  config.yml  persona_prompts.py  persona_prompts.yml  settings.py
libbydbot/api/: __init__.py  main.py  schemas.py
libbydbot/api/routes/: __init__.py  embed.py  retrieve.py  wiki.py
libbydbot/brain/: __init__.py  analyze.py  embed.py  ingest.py  memory.py  wiki.py  wiki_models.py
libbydbot/tui/: __init__.py  app.py  libby.tcss
libbydbot/tui/screens/: __init__.py  chat.py  dashboard.py  embed.py  settings.py  wiki_browser.py  wiki_ingest.py
libbydbot/tui/widgets/: __init__.py  status_bar.py
libbydbot/voice/: talk.py
scripts/: README_MIGRATION.md  backup-postgres.sh  cron-wrapper.sh  migrate.sh  migrate_duckdb_to_postgres.py  release.sh  setup-ssh-keys.sh  watch_sftp.py
ssh_keys/: README.md
tests/: conftest.py  test_api.py  test_cli.py  test_tui.py
tests/brain/: test_embed.py  test_ingest.py  test_migration.py  test_wiki.py
