[project]
authors = [
    {name = "Flávio Codeço Coelho", email = "fccoelho@gmail.com"},
]
license = {text = "GPLv3"}
requires-python = ">=3.11,<4.0"
dependencies = [
    "fire<1.0.0,>=0.6.0",
    "pgvector<1.0.0,>=0.2.5",
    "python-dotenv<2.0.0,>=1.0.1",
    "asyncpg<1.0.0,>=0.29.0",
    "sqlalchemy<3.0.0,>=2.0.29",
    "pymupdf<2.0.0,>=1.24.1",
    "loguru<1.0.0,>=0.7.2",
    "psycopg2-binary<3.0.0,>=2.9.9",
    "base-ai-agent @ git+https://github.com/Deeplearn-PeD/base-ai-agent.git",
    "pyaml<25.0.0,>=24.4.0",
    "sqlmodel<1.0.0,>=0.0.18",
    "pymupdf4llm<1.0.0,>=0.0.5",
]
name = "libby"
version = "0.3.8"
description = "Libby the Librarian Bot."
readme = "README.md"

[tool.uv]
package = true

[project.scripts]
libby = "libbydbot.cli:main"

[tool.setuptools.package-data]
libbydbot = ["config.yml"]

[project.optional-dependencies]
dev = [
    "pytest<9.0.0,>=8.1.1",
    "mkdocs<2.0.0,>=1.5.3",
    "aider-chat>=0.63.2",
]


