[project]
authors = [{ name = "Flávio Codeço Coelho", email = "fccoelho@gmail.com" }]
license = "GPL-3.0-only"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fire>=0.6.0",
    "pgvector>=0.2.5",
    "python-dotenv>=1.0.1",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.29",
    "pymupdf>=1.24.1",
    "loguru>=0.7.2",
    "psycopg2-binary>=2.9.9",
    "base-ai-agent @ git+https://github.com/Deeplearn-PeD/base-ai-agent.git@main",
    "sqlmodel>=0.0.18",
    "pymupdf4llm>=0.0.5",
    "sqlite-vss>=0.1.2",
    "duckdb>=1.1.3",
    "duckdb-engine>=0.14.0",
    "pydantic-settings>=2.7.1",
    "pytest>=8.3.4",
    "sqlite-vec>=0.1.6",
    "google-genai>=1.2.0",
]
name = "libby"
version = "0.6.0"
description = "Libby the Librarian Bot."
readme = "README.md"

[tool.uv]
package = true

[project.scripts]
libby = "libbydbot.cli:main"

[tool.setuptools.package-data]
libbydbot = ["config.yml"]

[tool.setuptools.packages.find]
include = ["libbydbot*"]
exclude = ["site*"]

[dependency-groups]
dev = [
    #    "aider-chat>=0.70.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.1.1", "mkdocs>=1.5.3"]
